--- a/jira/package.json
+++ b/jira/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.3.1",
     "formik": "^2.4.5",
     "history": "^5.3.0",
+    "html-react-parser": "^5.0.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
